testsuite/bad/bad046.jl
int main() { 
   int return;
   return 1;
}
